k8s/apps/auth-service/01-auth-app.yaml
# 1. The Internal DNS for the Auth Service
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: respondlyai
spec:
  selector:
    app: auth-backend
  ports:
    - protocol: TCP
      port: 8080        
      targetPort: 8080  

---
# 2. The Spring Boot Application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-backend
  namespace: respondlyai
spec:
  replicas: 1           
  selector:
    matchLabels:
      app: auth-backend
  template:
    metadata:
      labels:
        app: auth-backend
    spec:
      containers:
        - name: spring-boot-app
          image: YOUR_DOCKERHUB_USERNAME/auth-service-backend-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          
          # First, we inject all the perfectly matched variables
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
